--- a/package.json
+++ b/package.json
@@ -5,10 +5,24 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@tailwindcss/postcss7-compat": "^2.1.4",
+    "airtable": "^0.11.1",
+    "autoprefixer": "^9.8.6",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.21",
+    "postcss": "^7.0.35",
+    "postcss-loader": "^3.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -18,7 +32,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "jest": "^27.0.4"
   },
   "eslintConfig": {
     "root": true,
