--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
+    "npm": "^6.14.11",
     "postcss": "^7.0.35",
     "postcss-loader": "^3.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
