--- a/package.json
+++ b/package.json
@@ -10,43 +10,43 @@
     "test": "jest"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@^2.1.4",
-    "airtable": "^0.11.1",
-    "autoprefixer": "^9.8.6",
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
-    "css-loader": "^6.5.1",
-    "feather-icons": "^4.28.0",
+    "airtable": "^0.11.6",
+    "autoprefixer": "^9.8.8",
+    "axios": "^0.21.4",
+    "core-js": "^3.38.1",
+    "css-loader": "^6.11.0",
+    "feather-icons": "^4.29.2",
     "file-loader": "^6.2.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^2.4.6",
-    "npm": "^6.14.11",
-    "postcss": "^7.0.35",
+    "mini-css-extract-plugin": "^2.9.1",
+    "npm": "^6.14.18",
+    "postcss": "^7.0.39",
     "postcss-loader": "^3.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
-    "vue": "^3.0.0",
-    "vue-loader": "^17.0.0",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify": "^2.6.2"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "vue": "^3.5.11",
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.16",
+    "vuetify": "^2.7.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.2.26",
-    "@vue/test-utils": "^2.0.0-0",
+    "@vue/cli-plugin-babel": "~4.5.19",
+    "@vue/cli-plugin-eslint": "~4.5.19",
+    "@vue/cli-plugin-unit-jest": "~4.5.19",
+    "@vue/cli-service": "~4.5.19",
+    "@vue/compiler-sfc": "^3.5.11",
+    "@vue/test-utils": "^2.4.6",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "jest": "^27.0.4",
-    "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^7.20.0",
+    "jest": "^27.5.1",
+    "typescript": "~3.9.10",
+    "vue-jest": "5.0.0-alpha.10",
     "vue-svg-loader": "^0.16.0"
   },
   "eslintConfig": {
