--- a/package.json
+++ b/package.json
@@ -1,83 +1,26 @@
 {
-  "name": "ConnectBush",
-  "version": "0.1.0",
+  "name": "connectbush",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint",
-    "test": "jest"
+    "dev": "vite",
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/vue-fontawesome": "^3.0.8",
-    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@^2.1.4",
-    "airtable": "^0.11.6",
-    "autoprefixer": "^9.8.8",
-    "axios": "^0.21.4",
-    "core-js": "^3.38.1",
-    "css-loader": "^6.11.0",
-    "feather-icons": "^4.29.2",
-    "file-loader": "^6.2.0",
-    "font-awesome": "^4.7.0",
-    "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^2.9.1",
-    "npm": "^6.14.18",
     "particles-bg-vue": "^1.3.5",
-    "postcss": "^7.0.39",
-    "postcss-loader": "^3.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "vue": "^3.5.11",
-    "vue-loader": "^17.4.2",
-    "vue-template-compiler": "^2.7.16",
-    "vuetify": "^2.7.2"
+    "vue": "^3.5.10",
+    "vue-vanta": "^0.0.1",
+    "vue-vanta-revamp": "^0.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.19",
-    "@vue/cli-plugin-eslint": "~4.5.19",
-    "@vue/cli-plugin-unit-jest": "~4.5.19",
-    "@vue/cli-service": "~4.5.19",
-    "@vue/compiler-sfc": "^3.5.11",
-    "@vue/test-utils": "^2.4.6",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^7.20.0",
-    "jest": "^27.5.1",
-    "typescript": "~3.9.10",
-    "vue-jest": "5.0.0-alpha.10",
-    "vue-svg-loader": "^0.16.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {},
-    "overrides": [
-      {
-        "files": [
-          "**/__tests__/*.{j,t}s?(x)",
-          "**/tests/unit/**/*.spec.{j,t}s?(x)"
-        ],
-        "env": {
-          "jest": true
-        }
-      }
-    ]
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@vitejs/plugin-vue": "^5.1.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.8",
+    "vue-tsc": "^2.1.6"
+  }
 }
