--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "epic-spinners": "^2.0.0",
     "particles-bg-vue": "^1.3.5",
     "vue": "^3.5.10",
     "vue-vanta": "^0.0.1",
