--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "connectbush",
-  "private": true,
   "version": "2.0.0",
   "license": "MIT",
   "type": "module",
@@ -11,12 +10,11 @@
   },
   "dependencies": {
     "epic-spinners": "^2.0.0",
-    "particles-bg-vue": "^1.3.5",
     "vue": "^3.5.10",
-    "vue-vanta": "^0.0.1",
     "vue-vanta-revamp": "^0.1.2"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.2",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
